@@ -7,4 +7,6 @@
   <Option name="DriverMaxAttempts" value="5" />
   <Option name="SaveConfiguration" value="true" />
   <!-- <Option name="RetryTimeout" value="40000" /> -->
+  <!-- If you are using any Security Devices, you MUST set a network Key -->
+  <!-- <Options name="NetworkKey" value="0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10" /> -->
 </Options>
